03_pipmpleGrow/wmake.log
Making dependency list for source file pimpleGrow.C
g++ -std=c++11 -m64 -Dlinux64 -DWM_ARCH_OPTION=64 -DWM_DP -DWM_LABEL_SIZE=32 -Wall -Wextra -Wold-style-cast -Wnon-virtual-dtor -Wno-unused-parameter -Wno-invalid-offsetof -Wno-attributes -O3  -DNoRepository -ftemplate-depth-100 -I/opt/openfoam8/src/MomentumTransportModels/momentumTransportModels/lnInclude -I/opt/openfoam8/src/MomentumTransportModels/incompressible/lnInclude -I/opt/openfoam8/src/transportModels/lnInclude -I/opt/openfoam8/src/finiteVolume/lnInclude -I/opt/openfoam8/src/sampling/lnInclude -I/opt/openfoam8/src/dynamicFvMesh/lnInclude -I/opt/openfoam8/src/dynamicMesh/lnInclude -I/opt/openfoam8/src/meshTools/lnInclude  -IlnInclude -I. -I/opt/openfoam8/src/OpenFOAM/lnInclude -I/opt/openfoam8/src/OSspecific/POSIX/lnInclude   -fPIC -c pimpleGrow.C -o Make/linux64GccDPInt32Opt/pimpleGrow.o
In file included from pimpleGrow.C:120:
NEqn.H: In function ‘int main(int, char**)’:
NEqn.H:6:1: error: no matching function for call to ‘Foam::tmp<Foam::fvMatrix<Foam::Vector<double> > >::tmp(Foam::tmp<Foam::fvMatrix<double> >)’
    6 | );
      | ^
In file included from /opt/openfoam8/src/OpenFOAM/lnInclude/tmp.H:175,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/PtrListI.H:27,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/PtrList.H:195,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/List.C:29,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/List.H:316,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/labelList.H:48,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/UPstream.H:42,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/Pstream.H:42,
                 from /opt/openfoam8/src/OpenFOAM/lnInclude/parRun.H:35,
                 from /opt/openfoam8/src/finiteVolume/lnInclude/fvCFD.H:4,
                 from pimpleGrow.C:35:
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:108:8: note: candidate: ‘Foam::tmp<T>::tmp(const Foam::tmp<T>&, bool) [with T = Foam::fvMatrix<Foam::Vector<double> >]’
  108 | inline Foam::tmp<T>::tmp(const tmp<T>& t, bool allowTransfer)
      |        ^~~~
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:108:8: note:   candidate expects 2 arguments, 1 provided
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:95:8: note: candidate: ‘Foam::tmp<T>::tmp(const Foam::tmp<T>&&) [with T = Foam::fvMatrix<Foam::Vector<double> >]’
   95 | inline Foam::tmp<T>::tmp(const tmp<T>&& t)
      |        ^~~~
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:95:41: note:   no known conversion for argument 1 from ‘Foam::tmp<Foam::fvMatrix<double> >’ to ‘const Foam::tmp<Foam::fvMatrix<Foam::Vector<double> > >&&’
   95 | inline Foam::tmp<T>::tmp(const tmp<T>&& t)
      |                          ~~~~~~~~~~~~~~~^
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:73:8: note: candidate: ‘Foam::tmp<T>::tmp(const Foam::tmp<T>&) [with T = Foam::fvMatrix<Foam::Vector<double> >]’
   73 | inline Foam::tmp<T>::tmp(const tmp<T>& t)
      |        ^~~~
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:73:40: note:   no known conversion for argument 1 from ‘Foam::tmp<Foam::fvMatrix<double> >’ to ‘const Foam::tmp<Foam::fvMatrix<Foam::Vector<double> > >&’
   73 | inline Foam::tmp<T>::tmp(const tmp<T>& t)
      |                          ~~~~~~~~~~~~~~^
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:65:8: note: candidate: ‘Foam::tmp<T>::tmp(const T&) [with T = Foam::fvMatrix<Foam::Vector<double> >]’
   65 | inline Foam::tmp<T>::tmp(const T& tRef)
      |        ^~~~
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:65:35: note:   no known conversion for argument 1 from ‘Foam::tmp<Foam::fvMatrix<double> >’ to ‘const Foam::fvMatrix<Foam::Vector<double> >&’
   65 | inline Foam::tmp<T>::tmp(const T& tRef)
      |                          ~~~~~~~~~^~~~
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:49:8: note: candidate: ‘Foam::tmp<T>::tmp(T*) [with T = Foam::fvMatrix<Foam::Vector<double> >]’
   49 | inline Foam::tmp<T>::tmp(T* tPtr)
      |        ^~~~
/opt/openfoam8/src/OpenFOAM/lnInclude/tmpI.H:49:29: note:   no known conversion for argument 1 from ‘Foam::tmp<Foam::fvMatrix<double> >’ to ‘Foam::fvMatrix<Foam::Vector<double> >*’
   49 | inline Foam::tmp<T>::tmp(T* tPtr)
      |                          ~~~^~~~
make: *** [/opt/openfoam8/wmake/rules/General/transform:26: Make/linux64GccDPInt32Opt/pimpleGrow.o] Error 1
